--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -1,18 +1,13 @@
 # Addon Name: Invidious
 # Addon id: plugin.video.invidious
-# Addon Provider: lekma
 msgid ""
 msgstr ""
 "Project-Id-Version: plugin.video.invidious\n"
-"Report-Msgid-Bugs-To: https://github.com/lekma/plugin.video.invidious/issues\n"
-"POT-Creation-Date: 2020-04-11 10:28+0000\n"
-"PO-Revision-Date: 2021-02-01 10:30+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
+"Language: en_GB\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"Last-Translator: \n"
 
 # folders
 
@@ -20,284 +15,54 @@ msgctxt "#30000"
 msgid "Invidious"
 msgstr ""
 
-msgctxt "#30002"
-msgid "Search"
-msgstr ""
-
-msgctxt "#30003"
-msgid "Videos"
-msgstr ""
-
-msgctxt "#30004"
-msgid "Channels"
-msgstr ""
-
-msgctxt "#30005"
-msgid "Playlists"
-msgstr ""
-
-msgctxt "#30006"
-msgid "Live"
-msgstr ""
-
-msgctxt "#30007"
-msgid "Top"
-msgstr ""
-
-msgctxt "#30008"
-msgid "Popular"
-msgstr ""
-
-msgctxt "#30009"
-msgid "Trending"
-msgstr ""
-
-msgctxt "#30010"
-msgid "Music"
-msgstr ""
-
-msgctxt "#30011"
-msgid "Gaming"
-msgstr ""
-
-msgctxt "#30012"
-msgid "News"
-msgstr ""
-
-msgctxt "#30013"
-msgid "Movies"
-msgstr ""
-
-msgctxt "#30014"
-msgid "Feed"
-msgstr ""
-
-msgctxt "#30015"
-msgid "Fashion & Beauty"
-msgstr ""
-
-msgctxt "#30016"
-msgid "Popular on YouTube"
-msgstr ""
-
-msgctxt "#30017"
-msgid "Sports"
-msgstr ""
-
-msgctxt "#30018"
-msgid "Learning"
-msgstr ""
-
-# context menus
-
-msgctxt "#30031"
-msgid "Go to channel"
-msgstr ""
-
-msgctxt "#30032"
-msgid "Add channel to favourites"
-msgstr ""
-
-msgctxt "#30033"
-msgid "Play from YouTube"
-msgstr ""
-
-msgctxt "#30034"
-msgid "Add channel to feed"
-msgstr ""
-
-msgctxt "#30035"
-msgid "Remove"
-msgstr ""
-
-msgctxt "#30036"
-msgid "Clear search history"
-msgstr ""
-
-msgctxt "#30037"
-msgid "Play with YouTube add-on"
-msgstr ""
-
-# items
-
-msgctxt "#30053"
-msgid "Channel: {0.author}"
-msgstr ""
-
-msgctxt "#30054"
-msgid "Views: {0.viewCount}"
-msgstr ""
-
-msgctxt "#30055"
-msgid "Published: {0.published}"
-msgstr ""
-
-#msgctxt "#30056"
-#msgid "{0.title}\n\nChannel: {0.author}"
-#msgstr ""
-
-#msgctxt "#30057"
-#msgid "{0.title}\n\nChannel: {0.author}\nViews: {0.viewCount}\nPublished: {0.published}"
-#msgstr ""
-
-#msgctxt "#30058"
-#msgid "{0.title}\n\nChannel: {0.author}\nViews: {0.viewCount}\nPublished: {0.published}\n\n{0.description}"
-#msgstr ""
-
-msgctxt "#30059"
-msgid "[COLOR red][LIVE NOW][/COLOR] {0.title}"
-msgstr ""
-
-#msgctxt "#30060"
-#msgid "{0.author}\n\n{0.description}"
-#msgstr ""
-
-msgctxt "#30061"
-msgid "{0.title}\n\nChannel: {0.author}\nVideos: {0.videoCount}"
-msgstr ""
-
-msgctxt "#30062"
-msgid "New search"
-msgstr ""
-
-msgctxt "#30099"
-msgid "More..."
-msgstr ""
-
-# settings
-
-msgctxt "#30100"
+msgctxt "#40000"
 msgid "Settings"
 msgstr ""
 
-msgctxt "#30101"
+msgctxt "#40100"
 msgid "General"
 msgstr ""
 
-msgctxt "#30102"
-msgid "Instance hostname/ip address"
-msgstr ""
-
-msgctxt "#30103"
-msgid "Api path"
-msgstr ""
-
-msgctxt "#30104"
-msgid "Use ssl"
-msgstr ""
-
-msgctxt "#30105"
-msgid "Publicly available instances"
-msgstr ""
-
-msgctxt "#30106"
-msgid "Proxy videos"
-msgstr ""
-
-msgctxt "#30107"
+msgctxt "#40110"
 msgid "Instance"
 msgstr ""
 
-msgctxt "#30108"
+msgctxt "#40111"
 msgid "Select a public instance"
 msgstr ""
 
-msgctxt "#30110"
-msgid "Displays a list of public instances, along with the region the server is hosted in. Selecting one will update the \"Instance hostname/ip address\" setting."
+msgctxt "#40112"
+msgid "Displays a list of public instances, along with the region the server is hosted in. Selecting one will update the \"Uri\" setting."
 msgstr ""
 
-msgctxt "#30111"
-msgid "Persistent data"
+msgctxt "#40113"
+msgid "Publicly available instances"
 msgstr ""
 
-msgctxt "#30112"
-msgid "Remove channels from feed"
+msgctxt "#40114"
+msgid "Uri"
 msgstr ""
 
-msgctxt "#30113"
-msgid "Clear all search history"
+msgctxt "#40115"
+msgid "Path"
 msgstr ""
 
-msgctxt "#30114"
-msgid "Search history cleared"
+msgctxt "#40116"
+msgid "Timeout"
 msgstr ""
 
-msgctxt "#30115"
-msgid "Search history"
+msgctxt "#40120"
+msgid "Regional"
 msgstr ""
 
-msgctxt "#30121"
-msgid "Folders"
+msgctxt "#40121"
+msgid "Select your region"
 msgstr ""
 
-msgctxt "#30122"
-msgid "Auto-generated channels"
+msgctxt "#40123"
+msgid "Regions"
 msgstr ""
 
-msgctxt "#30123"
-msgid "Home"
-msgstr ""
-
-msgctxt "#30124"
-msgid "Language"
-msgstr ""
-
-msgctxt "#30125"
-msgid "Choose your language"
-msgstr ""
-
-msgctxt "#30126"
-msgid "Location"
-msgstr ""
-
-msgctxt "#30127"
-msgid "Choose your location"
-msgstr ""
-
-msgctxt "#30128"
-msgid "Timeout (0.0 means no timeout)"
-msgstr ""
-
-msgctxt "#30130"
-msgid "Sort by"
-msgstr ""
-
-msgctxt "#30131"
-msgid "Relevance"
-msgstr ""
-
-msgctxt "#30132"
-msgid "Upload date"
-msgstr ""
-
-msgctxt "#30133"
-msgid "View count"
-msgstr ""
-
-msgctxt "#30134"
-msgid "Rating"
-msgstr ""
-
-msgctxt "#30135"
-msgid "Always ask"
-msgstr ""
-
-msgctxt "#30136"
-msgid "Import NewPipe subscriptions"
-msgstr ""
-
-msgctxt "#30137"
-msgid "Interface"
-msgstr ""
-
-msgctxt "#30138"
-msgid "Context menus"
-msgstr ""
-
-msgctxt "#30151"
-msgid "VP9"
-msgstr ""
-
-msgctxt "#30152"
-msgid "AV1"
+msgctxt "#40124"
+msgid "Region"
 msgstr ""
